--- a/heros.html
+++ b/heros.html
@@ -24,10 +24,7 @@
     /></a>
     <hr />
     <br /><br />
-    <button><a href="./main/">Home</a></button>
-
-    <button><a href="./kajal.jpg" download="kajal img">Download</a></button>
-    <img src="./kajal.jpg" alt="kajal img" width="400px">
-    </a>
+    <button><a href="./index.html">Home</a></button>
+    
   </body>
 </html>
