--- a/heroines.html
+++ b/heroines.html
@@ -25,6 +25,6 @@
     <hr />
     <br />
     <br />
-    <button><a href="./main/">Home</a></button>
+    <button><a href="./index.html">Home</a></button>
   </body>
 </html>
