--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <center><h1>Heros & Heroines</h1></center>
     <h3>heros</h3>
-    <a href="../heros.html">click me</a>
+    <a href="./heros.html">click me</a>
     <h3>Heroines</h3>
-    <a href="../heroines.html">click me</a>
+    <a href="./heroines.html">click me</a>
   </body>
 </html>
